# blazing-fast-interpreter

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: basic_op.rs  compound_op.rs  interpreter.rs  interpreter_op.rs  main.rs  transpile_c.rs
